fixed spacing in page titles

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -23,12 +23,12 @@ html {
     position: relative;
 }
 
-h1, h2, h3, h4, h5, h6,
-p, blockquote, pre,
-ul, ol, dl, figure,
-%vertical-rhythm {
-    margin-bottom: $spacing-unit / 2;
-}
+// h1, h2, h3, h4, h5, h6,
+// p, blockquote, pre,
+// ul, ol, dl, figure,
+// %vertical-rhythm {
+//     margin-bottom: $spacing-unit / 2;
+// }
 
 figure > img {
     display: block;
