--- a/css/main.scss
+++ b/css/main.scss
@@ -14,7 +14,7 @@ $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
 $spacing-unit:     30px;
-$footer-height:    20px;
+$footer-height:    30px;
 
 $text-color:       #111;
 $text-color-light: #f2f2f2;
